# make-city-better-django

./: manage.py  pyproject.toml  settings.ini  settings.ini_template
config/: configurations.py  settings.py
